Fix board navigation alignment

--- a/src/features/boards/components/Boards/Boards.module.scss
+++ b/src/features/boards/components/Boards/Boards.module.scss
@@ -23,13 +23,14 @@
 .boardNav {
     display: grid;
     grid-template-columns: 1fr auto;
+    justify-self: center;
     padding: 0 5px;
     border-radius: 21px;
     max-width: 100%;
     height: 42px;
     background: var(--header-bg);
     border: 1px solid var(--header-border);
-    margin: 0 auto 1rem;
+    margin: 0 10px 1rem;
     transition: all 0.2s ease;
 }
 
